# algo-trading

./: .gitignore  README.md  crossover_strategy.pine  pyproject.toml
algo_trading/agents/: __init__.py  agents.py  configs.py  prompt_hub.yaml
algo_trading/agents/tools/: journalist.py  stock_journalist.py
algo_trading/data_providers/: __init__.py  alpaca.py
algo_trading/database/: __init__.py
algo_trading/database/companies/: __init__.py  companies_overview.py  configs.py
algo_trading/database/crossover/: configs.py  connection.py  read.py  write.py
algo_trading/database/crossovers/: configs.py  connection.py  read.py  write.py
algo_trading/database/news/: alphavantage_news.py  configs.py  finnhub_news.py
algo_trading/models/: __init__.py
algo_trading/models/crossover/: __init__.py  configs.py  crossover.py
algo_trading/models/crossovers/: __init__.py  crossovers.py
algo_trading/scripts/: __init__.py
algo_trading/scripts/crossover/: analyst.py  plotter.py
algo_trading/scripts/crossovers/: __init__.py  analyst.py  plotter.py
algo_trading/strategy/crossover/: __init__.py  entry.py
algo_trading/strategy/crossovers/: __init__.py  entry.py
examples/: company_overview_example.py
src/: get_data.py  sma_crossover.py
src/configs/: configs.py
src/hedge_ai/: agents.py
src/hedge_ai/database/: crossovers_filter.py  db_connection.py  extract_crossovers.py  store_crossovers.py
src/hedge_ai/database/config/: crossovers_config.py
src/hedge_ai/tools/modeling_tools/configs/: configs.py
src/hedge_ai/tools/modeling_tools/models/: crossovers.py
src/hedge_ai/tools/modeling_tools/models/crossovers/: crossovers.py  entrypoint.py
src/hedge_ai/tools/modeling_tools/utils/: fetch_data.py
src/hedge_ai/tools/modeling_tools/utils/plotter/: crossovers_plotter.py
src/hedge_ai/tools/modeling_tools/utils/writter/: crossovers_report_writter.py
src/live/: sma_crossover.py
src/utils/: fetch_data.py
web_app/: README.md
web_app/backend/: main.py  run.py
web_app/frontend/: package.json
web_app/frontend/public/: index.html  manifest.json
web_app/frontend/src/: App.js  index.css  index.js
web_app/frontend/src/components/: Header.js  Loading.js  ResultsDisplay.js  RiskSelector.js
