[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algo-trading"
version = "0.1.0"
description = "Algorithmic Trading Platform"
authors = [
    { name = "Mohamed Sriha", email = "medsriha@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "alpaca-py>=0.38.0",
    "pandas>=2.2.0",
    "numpy>=2.2.0",
    "matplotlib>=3.10.0",
    "ta-lib>=0.6.3",
    "pyarrow>=19.0.0",
    "langgraph>=0.2.72",
    "python-dotenv>=1.0.1",
    "langchain-openai>=0.3.6",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
]

# Development Dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-requests>=2.28.0",
]

# Build Configuration
[tool.hatch.build]
include = [
    "algo_trading/**/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["algo_trading"]

# Environment Configurations
[tool.hatch.envs.default]
dependencies = [
    "ruff>=0.1.0",
]

[tool.hatch.envs.default.scripts]
check = "ruff check {args}"
fix = "ruff check --fix {args}"
unsafe-fix = "ruff check --unsafe-fixes {args}"
format = "ruff format {args}"
format-check = "ruff format --check {args}"

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0",
    "mypy>=1.0",
    "pytest-cov>=4.1.0",
    "pylint>=3.0.0",
]

[tool.hatch.envs.test.scripts]
unit = 'pytest --cov-report xml:coverage.xml --cov="algo_trading" -m "not integration" {args:tests}'
integration = 'pytest --maxfail=5 -m "integration" {args:tests}'
types = "mypy algo_trading --non-interactive --install-types"
lint = "pylint -ry -j 0 {args:algo_trading}"

# Code Formatting Tools
[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

# Type Checking
[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true
cache_dir = ".mypy_cache"
namespace_packages = true
explicit_package_bases = true
mypy_path = "algo_trading"

[tool.ruff]
line-length = 120
target-version = "py38"

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "D",   # pydocstyle
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "RUF", # Ruff-specific rules
]

# Exclude some directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
]
# Ignore specific rules

ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
]


[tool.ruff.per-file-ignores]
"tests/**/*" = ["D", "ANN"]  # Ignore docstring and annotation rules in tests

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = ["algo_trading"]